--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,10 @@ dependencies = [
 ]
 
 [dependency-groups]
+examples = [
+    "aps-automation-sdk>=0.1.0",
+    "aps-viewer-sdk",
+]
 test = [
     "pytest>=9.0.2",
     "python-dotenv>=1.2.1",
@@ -20,3 +24,6 @@ build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
 packages = ["aps_viewer_sdk"]
+
+[tool.uv.sources]
+aps-viewer-sdk = { workspace = true }
