--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
+    "aps-automation-sdk==0.1.1rc1",
     "requests>=2.32.5",
 ]
 
