--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ examples = [
 test = [
     "pytest>=9.0.2",
     "python-dotenv>=1.2.1",
+    "pre-commit>=2.20.0",
+    "ruff>=0.0.274",
 ]
 
 [build-system]
