feat(ci): add ruff, mypy, and pytest to CI pipeline
- Add GitHub Actions workflow for CI
- Configure pytest to run unit tests by default
- Separate unit tests (tests/unit/) from integration tests (tests/integration/)
- Add unit tests for Viewer and plugins without requiring secrets
- CI runs: ruff format check, ruff lint, mypy, and pytest (unit tests only)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,3 +31,7 @@ packages = ["aps_viewer_sdk"]
 
 [tool.uv.sources]
 aps-viewer-sdk = { workspace = true }
+
+[tool.pytest.ini_options]
+testpaths = ["tests/unit"]
+addopts = ["-v"]
