test: add integration test support with secrets
- Mark integration tests with @pytest.mark.requires_secrets
- Add .env.example for contributors
- CI runs integration tests only on push to main with GitHub secrets
- Unit tests run on all PRs without secrets

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,3 +33,11 @@ jobs:
 
       - name: Run tests (unit only, no secrets)
         run: uv run pytest tests/unit/
+
+      - name: Run tests (integration, with secrets)
+        if: github.event.pull_request.head.repo.full_name == github.repository || github.ref == 'refs/heads/main'
+        env:
+          CLIENT_ID: ${{ secrets.CLIENT_ID }}
+          CLIENT_SECRET: ${{ secrets.CLIENT_SECRET }}
+          TEST_URN: ${{ secrets.TEST_URN }}
+        run: uv run --group test pytest tests/integration/ -v
